2005-03-08  Mark McLoughlin  <mark@skynet.ie>

	Fix for bug #164309 - .directory files in
	~/.local/share/desktop-directories not overriding the
	system versions.

	* libmenu/menu-tree.c:
	(resolve_default_app_dirs), (resolve_default_directory_dirs),
	(resolve_kde_legacy_dirs): append the user dir after the
	system dirs since it has higher priority.

2005-03-08  Mark McLoughlin  <mark@skynet.ie>

	Fix for bug #169031 - .directory files in subdirs of
	<LegacyDir> not getting pulled in.

	* libmenu/menu-tree.c:
	(add_menu_for_legacy_dir): put the relative path
	from the <LegacyDir> into the generated <Directory>
	rather than just ".directory"

2005-03-08  Mark McLoughlin  <mark@skynet.ie>

	Fix bug #168336 - weirdness with .desktop files which
	use [KDE Desktop Entry] as the main group.

	* libmenu/desktop-entries.c: (get_flags_from_key_file),
	(get_categories_from_key_file): use the actual desktop
	entry group name.

2005-03-08  Mark McLoughlin  <mark@skynet.ie>

	Should fix bug #167934 even though the reporter
	says it doesn't :-)

	Well, this at least fixes a problem with <LegacyDir>
	if the toplevel directory doesn't contain any entries.

	* libmenu/menu-tree.c: (add_menu_for_legacy_dir):
	Add a <Menu> for the <LegacyDir> if it has any subdirs.

2005-03-08  Mark McLoughlin  <mark@skynet.ie>

	Fix for bug #168445 - menu items in LegacyDirs don't
	get marked as allocated.

	* libmenu/menu-tree.c:
	(mark_allocated_foreach): kill.
	(process_layout), (process_only_unallocated),
	(menu_tree_build_from_layout): store the list of allocated
	entires in a DesktopEntrySet so we can look up an entry
	using its file ID rather than with a straight pointer
	comparison. Entries in LegacyDirs are copies of the original
	enties, so the pointer comparison doesn't work.

2005-03-08  Mark McLoughlin  <mark@skynet.ie>

	Fix for bug #168444 - LegacyDirs with a prefix don't work.

	* libmenu/entry-directories.c: (entry_directory_get_desktop):